# fujinet-nio

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeLists_posix.cmake  CMakePresets.json  README.md  build.sh  clang-uml.yml  fujinet_posix.cmake  partitions.csv  platformio.ini  pyproject.toml  sdkconfig.defaults  test_tnfs.py  test_udp.py
boards/: esp32-s3-wroom-1-n16r8.json  freenove-esp32-s3-wroom-1-n16r8.json  fujinet-v1-8mb.json  nosd-esp32-s3-wroom-1-n16r8.json  rs232-esp32-s3-wroom-1-n16r8.json  rs232-esp32-v1-8mb.json
build-artifacts/: CMakeLists_posix.cmake
build-artifacts/src/: CMakeLists.txt
distfiles/: atari-fdrive-fujinet.yaml  bbc-fujinet.yaml  run-fujinet-nio
docs/: Architecture.md  arch_core_io.puml  arch_platform_channels.puml  arch_protocol_fujibus.puml  architecture.md  build_feature_matrix.md  build_profiles.md  cli_device_testing.md  context_bootstrap.md  developer_onboarding.md  diagnostics.md  disk_device_protocol.md  event_driven_services.md  file_device_protocol.md  filesystem.md  fuji_device_protocol.md  hardware_capabilities.md  host_service_protocol.md  host_transport_multiplexing.md  http_filesystem.md  legacy_network_adapter.md  (+17 more)
src/: CMakeLists.txt  Kconfig  idf_component.yml
src/app/: console_commands.cpp  console_engine.cpp  console_fs_shell.cpp  console_parse.cpp  main_esp32.cpp  main_posix.cpp
src/lib/: app_store.cpp  bootstrap.cpp  build_profile.cpp  clock_device.cpp  clock_device_init.cpp  diagnostic_app_store_provider.cpp  diagnostic_core_provider.cpp  diagnostic_disk_provider.cpp  diagnostic_modem_provider.cpp  diagnostic_network_provider.cpp  diagnostic_parse.cpp  diagnostic_registry.cpp  diagnostic_uart_channel_provider.cpp  disk_device.cpp  disk_device_init.cpp  file_device.cpp  file_device_init.cpp  fs_prefix_resolver.cpp  fs_stdio.cpp  fuji_bus_packet.cpp  fuji_config_yaml_store.cpp  fuji_device.cpp  fujibus_transport.cpp  fujinet_core.cpp  fujinet_init.cpp  host_device.cpp  host_device_init.cpp  host_service.cpp  host_service_init.cpp  host_state.cpp  io_device_manager.cpp  io_service.cpp  legacy_network_adapter.cpp  list_directory_format.cpp  modem_device.cpp  modem_device_init.cpp  mount_applier.cpp  network_device.cpp  network_device_init.cpp  network_protocol_registry.cpp  (+16 more)
src/lib/disk/: atr_image.cpp  disk_service.cpp  image_registry.cpp  raw_image.cpp  ssd_image.cpp
src/lib/disk/image_probers/: fat_bpb_probe.cpp  image_probe.cpp  raw_image_probe.cpp
src/lib/fs/: flash_filesystem.cpp  http_filesystem.cpp  sd_filesystem.cpp  tnfs_filesystem.cpp
src/lib/path_resolvers/: fs_prefix_resolver.cpp  http_path_utils.cpp  http_relative_resolver.cpp  http_uri_resolver.cpp  path_resolver.cpp  path_resolver_utils.cpp  relative_path_resolver.cpp  tnfs_path_utils.cpp  tnfs_prefix_resolver.cpp  tnfs_relative_resolver.cpp  tnfs_uri_resolver.cpp
src/lib/tnfs/: tnfs_client_common.h  tnfs_tcp_client.cpp  tnfs_udp_client.cpp
src/lib/transport/: atari_sio_fujibus_framer.cpp
src/lib/transport/legacy/: byte_based_legacy_transport.cpp  iwm_traits.cpp  iwm_transport.cpp  legacy_network_bridge.cpp  legacy_transport.cpp  netsio_protocol.cpp  packet_based_legacy_transport.cpp  sio_traits.cpp  sio_transport.cpp
src/platform/esp32/: atari_sio_fujibus_channel.cpp  button_manager.cpp  channel_factory.cpp  console_transport_default.cpp  console_transport_stdio.cpp  console_transport_uart.cpp  console_transport_usb_serial_jtag.cpp  console_transport_usbcdc.cpp  disk_registry.cpp  early_init.cpp  fs_factory.cpp  fs_init.cpp  fuji_config_store.cpp  fuji_config_store_factory.cpp  fuji_device_factory.cpp  hardware_caps.cpp  hardware_sio_channel.cpp  http_network_protocol_espidf.cpp  iwm_bus_hardware.cpp  led_manager.cpp  log_output_tinyusb.cpp  logging.cpp  network_registry.cpp  pinmap.cpp  sio_bus_hardware.cpp  sntp_service.cpp  tcp_channel.cpp  tcp_network_protocol_espidf.cpp  tcp_socket_ops_default.cpp  tcp_socket_ops_espidf.cpp  time.cpp  tinyusb_cdc.cpp  tls_network_protocol_espidf.cpp  uart_channel.cpp  udp_channel.cpp  udp_socket_ops_default.cpp  udp_socket_ops_espidf.cpp  usb_cdc_channel.cpp  wifi_link.cpp
src/platform/esp32/legacy/: iwm_bus_hardware.cpp  sio_bus_hardware.cpp  sio_hardware.cpp  sio_traits.cpp
src/platform/posix/: atari_netsio_fujibus_channel.cpp  channel_factory.cpp  console_transport_default.cpp  console_transport_pty.cpp  console_transport_stdio.cpp  disk_registry.cpp  fs_factory.cpp  fs_posix.cpp  fuji_config_store.cpp  fuji_config_store_factory.cpp  fuji_device_factory.cpp  hardware_caps.cpp  http_network_protocol_curl.cpp  iwm_bus_hardware.cpp  logging.cpp  netsio_bus_hardware.cpp  network_registry.cpp  pty_channel.cpp  serial_channel.cpp  sio_bus_hardware.cpp  tcp_channel.cpp  tcp_network_protocol_posix.cpp  tcp_server_channel.cpp  tcp_socket_ops_default.cpp  tcp_socket_ops_posix.cpp  time.cpp  tls_network_protocol_posix.cpp  udp_channel.cpp  udp_socket_ops_default.cpp  udp_socket_ops_posix.cpp
src/platform/posix/legacy/: iwm_bus_hardware.cpp  netsio_bus_hardware.cpp  sio_bus_hardware.cpp  sio_hardware.cpp  sio_traits.cpp
tests/: CMakeLists.txt  fake_fs.h  net_device_test_helpers.h  test_atari_sio_fujibus_framer.cpp  test_build_profile.cpp  test_byte_codec.cpp  test_clock_device.cpp  test_console.cpp  test_diagnostics.cpp  test_disk_device_protocol.cpp  test_disk_image_cursor.cpp  test_embed_core.cpp  test_file_device_protocol.cpp  test_fuji_config_yaml.cpp  test_fuji_device.cpp  test_fujibus_transport_mapping.cpp  test_fujipacket.cpp  test_http_filesystem.cpp  test_http_path_resolver.cpp  test_list_directory_format.cpp  test_modem_device.cpp  test_mount_applier.cpp  test_network_device_protocol.cpp  test_network_device_tcp.cpp  test_network_device_tls.cpp  test_network_transport_logical_unit_mapping.cpp  test_path_resolver.cpp  test_posix_channel_factory.cpp  test_posix_serial_channel.cpp  test_smoke.cpp  test_ssd_image.cpp  test_storage_manager.cpp  test_system_events.cpp  test_tcp_channel.cpp  test_tnfs_filesystem.cpp  test_udp_channel.cpp  test_uri_display_formatter.cpp  test_uri_parser.cpp
(+314 files in other folders)
