[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fujinet-tools"
version = "0.1.0"
description = "FujiNet-NIO host utilities (FujiBus + FileDevice client)"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
]

[tool.setuptools]
package-dir = {"" = "py"}

[project.scripts]
fujinet = "fujinet_tools.cli:main"
