[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fujinet-tools"
version = "0.1.0"
description = "FujiNet-NIO host utilities (FujiBus + FileDevice client)"
requires-python = ">=3.10"
dependencies = [
  "pyserial~=3.5",
  "PyYAML~=6.0.3",
  "serial~=0.0.96",
  "ninja~=1.13.0"
]

[tool.setuptools]
package-dir = {"" = "py"}

[project.scripts]
fujinet = "fujinet_tools.cli:main"
